Added Temp Preferences on my own ( I am awesome like that)

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -17,4 +17,12 @@
         android:inputType="text"
         android:singleLine="true" />
 
+    <ListPreference
+        android:title="Temperature Units"
+        android:key="@string/temp_pref"
+        android:entries="@array/TemperatureUnits"
+        android:entryValues="@array/TemperatureValues"
+        android:defaultValue="@string/TemperatureDefaultValue"
+        />
+
 </PreferenceScreen>
