--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,8 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sunshine.app.DetailActivity$PlaceholderFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_detail"
+    tools:context="com.example.khumalo.sunshine.app.DetailActivity.PlaceholderFragment">
 
     <TextView android:text="Hello Word" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
