--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,11 +10,9 @@
     tools:context=".MainActivity$MainActivityFragment">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/ForecastListStyle"
         android:id="@+id/listview_forecast"
-        android:layout_marginTop="60dp">
-
-    </ListView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
